--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
 
 </head>
 
-<body>
+<body class="bg-dark">
     
     <div class="wrapper">
-        <nav class="navbar navbar-expand-lg">
+        <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
             <a class="navbar-brand" href="index.html">UFO Sightings</a>
         </nav>
     
     <div class="jumbotron">
-        <h1>The Truth is Out There</h1>
+        <h1 class="display-4">The Truth is Out There</h1>
     </div>
 
     <div class="container-fluid">
@@ -44,19 +44,20 @@
       <div class="container-fluid">
         <div class="row">
             <div class="col-md-3">
-                <h3>Filter Sightings</h3>
-                <form>
+                <form class="bg-dark">
                     <p>Filter Search</p>
-                </form>
-                <ul class="list-group">
-                    <li class="list-group-item">
+                    <ul class="bg-dark">
+                      <li class="bg-dark">
                         <label for="date">Enter Date</label>
                         <input type="text" placeholder="1/10/2010" id="datetime" />
-                    </li>
-                    <li class="list-group-item">
-                        <button id="filter-btn" type="button" class="btn btn-default">Filter Table</button>
-                    </li>
-                </ul>
+                      </li>
+                      <li class="bg-dark">
+                         <button id="filter-btn" type="button" class="btn btn-dark">
+                           Filter Table
+                         </button>
+                      </li>
+                    </ul>
+                   </form>
             </div>
             <div class="col-md-9">
                 <table class="table table-striped">
@@ -69,7 +70,6 @@
                             <th>Shape</th>
                             <th>Duration</th>
                             <th>Comments</th>
-
                         </tr>
                     </thread>
                     <tbody></tbody>
@@ -77,6 +77,10 @@
             </div>
         </div>
       </div>
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js"></script>
+    <script src="static/js/data.js"></script>
+    <script src="static/js/app.js"></script>
 </body>
 
 </html>
