--- a/index.html
+++ b/index.html
@@ -52,16 +52,27 @@
                         <input type="text" placeholder="1/10/2010" id="datetime" />
                       </li>
                       <li class="bg-dark">
-                         <button id="filter-btn" type="button" class="btn btn-dark">
-                           Filter Table
-                         </button>
+                        <label for="date">City</label>
+                        <input type="text" placeholder="benton" id="city" />
+                      </li>
+                      <li class="bg-dark">
+                        <label for="date">State</label>
+                        <input type="text" placeholder="ar" id="state" />
+                      </li>
+                      <li class="bg-dark">
+                        <label for="date">Country</label>
+                        <input type="text" placeholder="us" id="country" />
+                      </li>
+                      <li class="bg-dark">
+                        <label for="date">Shape</label>
+                        <input type="text" placeholder="circle" id="shape" />
                       </li>
                     </ul>
                    </form>
             </div>
             <div class="col-md-9">
                 <table class="table table-striped">
-                    <thread>
+                    <thead>
                         <tr>
                             <th>Date</th>
                             <th>City</th>
@@ -71,7 +82,7 @@
                             <th>Duration</th>
                             <th>Comments</th>
                         </tr>
-                    </thread>
+                    </thead>
                     <tbody></tbody>
                 </table>
             </div>
