Resolved filters issue

--- a/index.html
+++ b/index.html
@@ -52,19 +52,19 @@
                         <input type="text" placeholder="1/10/2010" id="datetime" />
                       </li>
                       <li class="bg-dark">
-                        <label for="date">City</label>
+                        <label for="city">City</label>
                         <input type="text" placeholder="benton" id="city" />
                       </li>
                       <li class="bg-dark">
-                        <label for="date">State</label>
+                        <label for="state">State</label>
                         <input type="text" placeholder="ar" id="state" />
                       </li>
                       <li class="bg-dark">
-                        <label for="date">Country</label>
+                        <label for="country">Country</label>
                         <input type="text" placeholder="us" id="country" />
                       </li>
                       <li class="bg-dark">
-                        <label for="date">Shape</label>
+                        <label for="shape">Shape</label>
                         <input type="text" placeholder="circle" id="shape" />
                       </li>
                     </ul>
